k8s/service-app1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app1
spec:
  type: LoadBalancer
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
