k8s/service-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app2
spec:
  type: LoadBalancer
  selector:
    app: app2
  ports:
  - port: 8080
    targetPort: 8080
